--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2634,6 +2634,9 @@ sardinia.263.a: "We must prepare"
 sardinia.264.t: "Italian National Exhibition of [GetYear]"
 sardinia.264.d: "Following the Unification of Italy, Victor Emmanuel and other politicians were hoping to for a show of the might of the new Italian Nation. Talented Scientist and former Finance Minister Quintino Sella commissioned the Italian National Exhibition which took place in Florence. Using the Stazione Leopolda as a base, the exhibition will run for multilpe months. Over 8,000 exhibitors are expected to show off the best of the best Italy has to offer in the fields of the arts, sciences, agriculture, and Italian industries. Most impressive so far has been the display from the agriculture field and the magnificant gardens put forward by some of those benefactories."
 sardinia.264.a: "What a great showcase of the Italian Nation!"
+sardinia.266.t: "Austria Demands Demobilization!"
+sardinia.266.d: "§O[AUS.GetNameWithFlag]§!, fearful of our troop movements on the border of §O[LVN.GetNameWithFlag]§!, has demanded that we demobilize immediately or face war. This only fuels the fire of Risorgimento more, and with §3[FRA.GetNameWithFlag]§! on our side, it seems that Austrian defeat is all but certain in a war against them."
+sardinia.266.a: "Stand our ground."
 
 
 
