--- a/toi/localisation/english/australia_l_english.yml
+++ b/toi/localisation/english/australia_l_english.yml
@@ -38,6 +38,11 @@
  
  AST_The_Stain: "The Stain"
  AST_The_Stain_desc: "12...12 is the confirmed number of Aboriginals that are still alive on this Island of ours. Having survived the black war which killed their fellow tribesmen, they now have to bear witness to their eventual extinction. But the memory of what we did...the killing of over 40,000 men and women...will come to haunt us later...for now...its a stain...we cannot unshackle."
+
+ nsw_colonial_government.1.t: "The 2 year Tennis match"
+ nsw_colonial_government.1.d: "The past 2 years have been marked by a borderline political tennis match, with Charles Cowper and Henry Parkers resigning or forced out of the role of premier. This has happened yet again...As a result Charles Cowper is now back in the role of premier for the next good while."
+ nsw_colonial_government.1.a: "15-30"
+
  britishaustralia.1.t: "Royal Assent for Queensland"
  britishaustralia.1.d: "Queensland has been requesting separation from [NSW.GetName] since 1851, Today Royal Assent has finally been granted"
  britishaustralia.1.a: "Sign the Letters Patent"
