--- a/toi/localisation/english/nsw_l_english.yml
+++ b/toi/localisation/english/nsw_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
 
+###POLITICS###
+
+POLITICS_CHARLES_COWPER_DESC: "testing"
+
 ###FOCUS TREE###
 NSW_expansionofthenswforce: "Expansion of the NSW Force"
 NSW_expansionofthenswforce_desc: "As we continue to serve the Empire in its conflicts, its quite obvious that an expansion is needed to have forces avaliable to send out, but also enough to protect our home."
