--- a/toi/localisation/english/spain_l_english.yml
+++ b/toi/localisation/english/spain_l_english.yml
@@ -631,6 +631,7 @@ SPR_6dy_dealing_with_guerrilla_attacks: "Dealing with Guerrilla Attacks"
 SPR_6dy_death_to_tratiors: "Death to Tratiors"
 SPR_6dy_exile_for_tratiors: "Exile for Tratiors"
 SPR_6dy_fortify_bilbao: "Fortify Bilbao"
+SPR_6dy_building_loyal_nobility: "Building a Loyal Nobility"
 
 ##### IDEAS #####
 #Country Ideas
