post gober gui fixes

--- a/toi/localisation/english/research_l_english.yml
+++ b/toi/localisation/english/research_l_english.yml
@@ -13,6 +13,8 @@
  TECH_ALREADY_RESEARCHED_COST: "Already researched: $POINTS|0Y$ days\n"
  RESEARCH_NO_RESEARCH: "Unused"
  RESEARCH_RESEARCH: "Progress"
+ RESEARCH_TAB_SLOTS: "Research Slots"
+ RESEARCH_TAB_FACILITIES: "Experimental Facilities"
  RESEARCH_DONE: "Researched"
  RESEARCH_TIME_TO_COMPLETE: "Research time: $TIME|H$"
  RESEARCH_IDEA_BONUS_ENTRY: "$IDEA$: $FACTOR|G=0%$"
@@ -22,6 +24,9 @@
  RESEARCH_REPLACE_TRANSFER: "\n$SAVED|H0$ day(s) of previously saved research will be transferred to the new technology."
  RESEARCH_REPLACE_EXCLUSIVE_TITLE: "Replace Mutually Exclusive Research"
  RESEARCH_REPLACE_EXCLUSIVE_DESC: "Are you sure you want to research §Y$NEW_TECH$§! instead of §Y$OLD_TECH$§! and all its sub-technologies?"
+ RESEARCH_REPLACE_MIO_TITLE: "Replace Design Team"
+ RESEARCH_MIO_XP_COST_DESC: "Assigning $ORG|H$ to $TECH|H$ will cost $COST$."
+ RESEARCH_MIO_XP_COST_DESC_REPLACE: "Assigning $ORG|H$ instead of $OLD_ORG|H$ to $TECH|H$ with cost $COST$."
  RESEARCH_EXCLUSIVE_INFO_TITLE_TOOLTIP: "§RThe technology is mutually exclusive with:§!"
  RESEARCH_DOCTRINE_EXCLUSIVE_INFO_TITLE_TOOLTIP: "§RThe doctrine is mutually exclusive with:§!"
  RESEARCH_EXCLUSIVE_INFO_DESC: "Mutually exclusive with"
