--- a/toi/localisation/english/topbar_l_english.yml
+++ b/toi/localisation/english/topbar_l_english.yml
@@ -11,6 +11,9 @@
  TOPBAR_PRODUCTION_DESC: "Produce equipment for your army, navy and air force."
  TOPBAR_TECHNOLOGY: "Research"
  TOPBAR_TECHNOLOGY_DESC: "Research £tech_mod Technologies to advance your nation."
+ TOPBAR_TECHNOLOGY_PROTOTYPE_REWARD: "You have $AMOUNT|Y$ completed prototype iteration reward(s) to read"
+ TOPBAR_TECHNOLOGY_LEFT_CLICK: "§GLeft-Click§! to open on the research slots tab"
+ TOPBAR_TECHNOLOGY_RIGHT_CLICK: "§GRight-Click§! to open on the facilities tab"
  TOPBAR_DIPLOMACY: "Diplomacy Overview"
  TOPBAR_DIPLOMACY_DESC: "Conduct negotiations with other nations."
  TOPBAR_INTERNATIONAL_MARKET: "International Market"
@@ -27,15 +30,19 @@
  TOPBAR_AIR_DESC: "See an overview of your air forces."
  TOPBAR_CONVOY_STRING: "$FREE|^0$"
  MILITARY_FACTORIES_STATUS: "Military Factories in use: §Y$USED$§!/§Y$TOTAL$§!"
+ TOPBAR_FACTORY_STATUS_OWNED: "Owned: $COUNT|H$"
+ TOPBAR_FACTORY_STATUS_OCCUPIED: "From occupation: §G+$COUNT$§!"
+ TOPBAR_FACTORY_STATUS_TRADED: "From trade: §G+$COUNT$§!"
+ TOPBAR_FACTORY_STATUS_DAMAGED: "Damaged: §R-$COUNT$§!"
  DAMAGED_MILITARY_FACTORIES: "Damaged Military Factories: $COUNT|H$"
- NAVAL_FACTORIES_STATUS: "Naval Dockyards in use: §Y$USED$§!/§Y$TOTAL$§!"
+ NAVAL_FACTORIES_STATUS:0 "Naval Dockyards in use: §Y$USED$§!/§Y$TOTAL$§!"
  DAMAGED_NAVAL_FACTORIES: "Damaged Naval Dockyards: $COUNT|H$"
- CIVILIAN_FACTORIES_STATUS: "Civilian Factories in use: §Y$USED$§!/§Y$TOTAL$§!"
+ CIVILIAN_FACTORIES_STATUS:0 "Civilian Factories in use: §Y$USED$§!/§Y$TOTAL$§!"
  DAMAGED_CIVILIAN_FACTORIES: "Damaged Civilian Factories: $COUNT|H$"
  MILITARY_FACTORIES_OCCUPATION_STATUS: "Military Factories from events & occupation: §Y$COUNT$§!"
  NAVAL_FACTORIES_OCCUPATION_STATUS: "Naval Dockyards from events & occupation: §Y$COUNT$§!"
  CIVILIAN_FACTORIES_OCCUPATION_STATUS: "Civilian Factories from events & occupation: §Y$COUNT$§!"
- NUKES_COUNT_NO_PROGRESS: "$NUM$"
+ NUKES_COUNT_NO_PROGRESS:0 "$NUM$"
  NUKES_COUNT_PROGRESS: "$NUM$ ($PROG|%0$)"
  THREAT_TOOLTIP: "§HWorld Tension\n§! Current value: $VAL|1%H$"
  THREAT_TIME_SCALE_TOOLTIP: "Current scale: $VAL|1%H$\nChanging by $MONTHLY_DECREASE|1%H$ per month since $START_DATE|1%H$,\nminimum: $MIN|1%H$"
@@ -62,7 +69,7 @@
  LEND_LEASE_TENSION_DESC: "Needs $VAL|%Y0$ tension to send a lend-lease aid.\n"
  SEND_VOLUNTEERS_TENSION_DESC: "Needs $VAL|%Y0$ tension to send volunteer forces.\n"
  GUARANTEE_TENSION_DESC: "Needs $VAL|%Y0$ tension to guarantee another nation's independence.\n"
- NUCLEAR_PRODUCTION_SPEED: "Nuclear Reactors built: $NUM|Y$\nTotal production speed: $PROC|%1+$/day"
+ COUNTRY_NUCLEAR_PRODUCTION_INFO: "Nuclear Reactors built: $NUM|Y$"
  THREAT_WINDOW_NAME: "World Tension history"
  DECISIONVIEW_AMOUNT_TIMEOUT_ITEMS: "$AMOUNT|R$"
  DECISIONVIEW_AMOUNT_CAN_TAKE_ITEMS: "$AMOUNT$"
