--- a/toi/localisation/english/research_l_english.yml
+++ b/toi/localisation/english/research_l_english.yml
@@ -69,19 +69,13 @@
  DAYS_SAVED_RESEARCH_DESC: "Days saved: $DAYS|0G$\n"
  NO_RESEARCH_PENALTY: "§GTech is current - no research penalty§!"
  FINISHED_RESEARCH_POPUP_DESC: "...and $NUM|H$ additional effects. See Details."
-
-
-
-
-
-
  infantry_folder: "Army"
  infantry_folder_desc: "Equipment and other new inventions for the armed forces of your nation."
  support_folder: "Army Support"
  support_folder_desc: "A variety of firms and technology available to assist your men on the battlefield."
  armour_folder: "Military Vehicles"
  armour_folder_desc: "Military Vehicles include all vehicles which find use in the military, including, sometimes, vehicles that are civilian in nature."
- nsb_armour_folder: "Armor"
+ nsb_armour_folder:0 "Armor"
  nsb_armour_folder_desc: "Tanks and their variants."
  artillery_folder: "Artillery"
  artillery_folder_desc: "Equipment and technology concerning artillery technology, from the simple cannon to the modern SAM."
@@ -4960,3 +4954,80 @@
  mio_cat_tech_all_cruiser_and_modules: "All Cruiser Technologies" #Cannot talk about modules because of DLC lock tack
  mio_cat_tech_all_destroyer_and_modules: "All Destroyer Technologies" #Cannot talk about modules because of DLC lock tack
  harvey_low_strength_idea: "Prototype Harvey armor"
+
+ sp_rockets_improved_guidance: "Improved Guidance"
+ sp_rockets_improved_guidance_desc: "Better guidance systems for rockets, will allow us to send our flying bombs further, making them an even bigger threat to our enemies. By improving the guidance systems for smaller rockets, our rocket artillery will be able to improve their aim as well."
+ sp_rockets_rocket_bomber: "$rocket_propelled_bombs$"
+ sp_rockets_rocket_bomber_desc: "$rocket_propelled_bombs_desc$"
+ sp_rockets_improved_rocket_bomber: "$improved_rocket_propelled_bombs$"
+ sp_rockets_improved_rocket_bomber_desc: "$improved_rocket_propelled_bombs_desc$"
+
+ sp_armored_advanced_flamethrower_tech: "Advanced Flamethrower"
+ sp_armored_advanced_flamethrower_tech_desc: "$advanced_flamethrower_desc$"
+ sp_armored_lc_high_impact_obliterator_cannon_tech: "High-Impact Obliterator Cannon"
+ sp_armored_lc_high_impact_obliterator_cannon_tech_desc: "$lc_high_impact_obliterator_cannon_desc$"
+ sp_armored_lc_naval_engine_conversion_tech: "Naval Engine Conversion"
+ sp_armored_lc_naval_engine_conversion_tech_desc: "Utilizing naval engineering techniques such as reinforced crankshafts, high-torque transmissions and specialized cooling systems can enhance the power output and durability of Land Cruiser engines, allowing them to better manage the immense weight and stress."
+ sp_armored_lc_transmission_improvements_tech: "Transmission Improvements"
+ sp_armored_lc_transmission_improvements_tech_desc: "Refined gear ratios, clutch mechanisms and torque converters to create more efficient transmissions capable of handling the extreme power and weight of Land Cruisers, improving overall mobility and reducing mechanical strain."
+ sp_armored_lc_specialized_field_manuals_tech: "Specialized Field Manuals"
+ sp_armored_lc_specialized_field_manuals_tech_desc: "Developing detailed training manuals tailored for Land Cruiser crews, covering unique operational procedures, maintenance protocols, and complex battlefield tactics required to effectively command these giant war machines."
+ sp_armored_lc_weapon_fire_control_tech: "Weapon Fire Control"
+ sp_armored_lc_weapon_fire_control_tech_desc: "Implementing advanced targeting optics, rangefinders, and gyroscopic stabilizers to enhance weapon accuracy and firing coordination, ensuring the guns can effectively engage targets despite their massive recoil and slow maneuverability."
+ sp_armored_engineer_tech: "Armored Engineer Company"
+ sp_armored_engineer_tech_desc: "Combining engineering expertise with armored protection, armored engineer units are specialized on clearing obstacles and supporting front-line advances under heavy fire."
+ sp_armored_maintenance_tech: "Armored Maintenance Company"
+ sp_armored_maintenance_tech_desc: "The use of armored recovery vehicles enables our maintenance personnel to recover and repair all kinds of equipment, ensuring maximum operational readiness on the battlefield."
+ sp_armored_signal_tech: "Armored Signal Company"
+ sp_armored_signal_tech_desc: "Equipping our units with command vehicles will ensure secure and reliable battlefield communications and coordination under armored protection."
+ sp_armored_motorized_military_police_tech: "Motorized Military Police"
+ sp_armored_motorized_military_police_tech_desc: "Equipped with military motorbikes, these units are tasked with maintaining order behind the lines, escorting convoys, and conducting patrols. Their speed and mobility allow them to quickly respond to disruptions and, if needed, perform reconnaissance in active combat zones."
+ sp_cluster_shells: "Cluster Shells"
+ sp_cluster_shells_desc: "Cluster shells disperse multiple submunitions over a wide area, maximizing damage against enemy troops and equipment"
+ sp_artillery_rocket_assisted_projectiles_tech: "Rocket-Assisted Projectiles"
+ sp_artillery_rocket_assisted_projectiles_tech_desc: "Enhanced projectiles for super-heavy howitzers, designed to extend range and improve impact through rocket propulsion."
+ sp_artillery_purpose_built_gun_motor_carriages_tech: "Purpose-Built Gun Motor Carriages"
+ sp_artillery_purpose_built_gun_motor_carriages_tech_desc: "Specialized vehicles designed to transport and support super-heavy howitzers, ensuring mobility and easiness of battlefield deployment."
+ sp_multi_product_supply_ships: "Multi-Product Supply Ship"
+ sp_multi_product_supply_ships_desc: "With the use of the newly produced supply ships, we can ensure smoother transfer of the fuel, ammunition and supplies."
+ sp_standard_tenshioned_replenishment_alongside_method: "Standardized Tenshioned Replenishment Alongside Method"
+ sp_standard_tenshioned_replenishment_alongside_method_desc: "Standardized Tenshioned Replenishment Alongside Method or STREAM is a further evolution of ensuring a steady resupply of our long range naval operations"
+ sp_aip_engine_improved_tech: "AIP-Diesel Combination Engines"
+ sp_aip_engine_improved_tech_desc: "With further refinement of the AIP technology, we are seeing improvement both in terms of the performance as well as the material consumption used by the engines"
+ sp_aip_engine_advanced_tech: "High-Speed Walter Engines"
+ sp_aip_engine_advanced_tech_desc: "Our experience and understanding of the Air-Independent Propulsion System have allowed us to develop state of the art engines. Silent, fast and deadly."
+ sp_refined_pykrete: "Refined Pykrete"
+ sp_refined_pykrete_desc: "With the further refinement of the Pykrete, we are now able to have much better insulation and protection for our aircraft aboard the Ice Carrier"
+ sp_ice_composite_runawayas: "Ice Composite Runways"
+ sp_ice_composite_runawayas_desc: "With the continued development of the Ice Composites we are looking for the best materials and construction techniques to provide the protection for our carrier and planes"
+ heavy_battleship2: "Super-Heavy Battleship II"
+ heavy_battleship2_desc: "An improvement on our earlier super heavy design with stronger weapons and improved fire control systems."
+ sp_shock_hardening_techniques: "Shock-Hardening Techniques"
+ sp_shock_hardening_techniques_desc: "By using various Shock-Hardening Techniques, and utilizing stress equalizers for our components, we lowered the rate of premature detonations, making our projectiles more reliable and effective"
+ sp_variable_time_fuze_shells: "Variable Time Fuze Shells"
+ sp_variable_time_fuze_shells_desc: "With adapting Variable Time Fuze Shells - we have made our field artillery devastating against our opponents. Shells explode before reaching the ground, thus creating much bigger kill-zone."
+ sp_helicopter_transport_pods_tech: "Helicopter Transport Company"
+ sp_helicopter_transport_pods_tech_desc: "Helicopters equipped with transport pods or towing goods beneath them on a line can move supplies and equipment quickly and without regard for terrain. Getting stuck in the mud is a thing of the past!"
+ sp_helicopter_artillery_observers_tech: "Helicopter Recon Company"
+ sp_helicopter_artillery_observers_tech_desc: "Helicopters are able get a good vantage point of the battlefield regardless of the actual terrain, and thus make excellent forward scouts to provide accurate feedback to artillery barrages."
+ sp_helicopter_med_evac_tech: "Helicopter Med-Evac Company"
+ sp_helicopter_med_evac_tech_desc: "Incoming wounded! We have incoming wounded! Helicopters provide even faster casualty evacuation than regular ambulances."
+
+ sp_rockets_dual_chamber_rocket_engine_1: "Dual Chamber Rocket Engines"
+ sp_rockets_dual_chamber_rocket_engine_1_desc: "By adding a second combustion chamber to the engine, we can improve the flight time and effectiveness of our rocket engines."
+ sp_rockets_dual_chamber_rocket_engine_2: "Advanced Dual Chamber Rocket Engines"
+ sp_rockets_dual_chamber_rocket_engine_2_desc: "Further refinements of the dual combustion engine may lead to even greater improvements in the design's effectiveness."
+ 
+ reinforced_wings_mothership: "Reinforced Mothership Wings"
+ reinforced_wings_mothership_desc: "Without their mothership, the fighters are essentially stranded in the air, severely limiting their operational effectiveness. Strengthening the mothership's air wings is the most cost-effective strategy to enhance the survivability of the entire squadron."
+
+ 
+ miniature_fighters: "Miniature Fighters"
+ miniature_fighters_desc: "With smaller fighters we will be able to carry more of them into battle without sacrificing much firepower, as well as reducing the weight of the Motherships load"
+ 
+ aerial_hangars: "Aerial Hangars"
+ aerial_hangars_desc: "Aerial Hangars attached to the mothership allows us to fit even more miniature fighters onto the top of the aircraft, allowing for increased firepower and further reach."
+
+ mothership: "Mothership Aircraft"
+
+ transport_planes_cat: "Transport Planes"
