industrial tree for generic

--- a/toi/localisation/english/generic_focus_l_english.yml
+++ b/toi/localisation/english/generic_focus_l_english.yml
@@ -68,8 +68,42 @@
   generic_vic_early_stages_of_industrialization: "Early Stages of Industrialization"
   generic_vic_early_stages_of_industrialization_desc: "We have not yet decided how we wish to industrialize"
   generic_vic_embrace_industry_0: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_0_1: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_0_2: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_1_0: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_1_1: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_1_2: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_2_0: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_2_1: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_2_2: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_3_0: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_3_1: "Industrial Revolution: Embrace Industry"
+  generic_vic_embrace_industry_3_2: "Industrial Revolution: Embrace Industry"
   generic_vic_balanced_approach_0: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_0_1: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_0_2: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_1_0: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_1_1: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_1_2: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_2_0: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_2_1: "Industrial Revolution: Balanced Approach"
+  generic_vic_balanced_approach_2_2: "Industrial Revolution: Balanced Approach"
   generic_vic_agricultural_focus_0: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_0_1: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_0_2: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_1_0: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_1_1: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_1_2: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_2_0: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_2_1: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_2_2: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_3_0: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_3_1: "Industrial Revolution: Agricultural Focus"
+  generic_vic_agricultural_focus_3_2: "Industrial Revolution: Agricultural Focus"
+  
+  generic_vic_embrace_industry_4: "Lasting effects of the Industrial Revolution"
+  generic_vic_balanced_approach_3: "Lasting effects of the Industrial Revolution"
+  generic_vic_agricultural_focus_4: "Lasting effects of the Industrial Revolution"
  
  # Government / Research
   generic_focus_vic_strengthen_government: "Strengthen Government"
@@ -226,6 +260,7 @@
   generic_focus_vic_a_new_way_of_life_desc: ""
   generic_focus_vic_telegraph_cables: "Telegraph Cables"
   generic_focus_vic_telegraph_cables_desc: ""
+  generic_focus_vic_telegraph_cables_tt: "\nIf §YElectrical Telegraph§! has already been researched:\n   £political_power_texticon  Political Power: §G+100§!\n   £research_bonus_texticon  §Y1x§! §G100%§! Research bonus for: §YCommunication Technology§!."
   generic_focus_vic_new_production_methods: "New Production Methods"
   generic_focus_vic_new_production_methods_desc: ""
   generic_focus_vic_mechanized_agriculture: "Mechanized Agriculture"
@@ -236,6 +271,8 @@
   generic_focus_vic_aristocratic_state_desc: ""
   generic_focus_vic_industrial_age: "Industrial Age"
   generic_focus_vic_industrial_age_desc: ""
+  generic_vic_gain_lasting_effects_of_ir_tt: "Gains '§YLasting effects of the Industrial Revolution§!' which grants the same bonuses you recieved in the §YIndustrial Tree§! for §Y10§! year(s)."
+  generic_vic_transitions_to_next_tree_tt: "\nTransitions to the §YMachine Era Tree§!.\n§RThis has not been implemented yet. This is the end of the tree.§!"
 
  # Army
   generic_focus_vic_establish_a_professional_army: "Establish A Professional Army"
