Middle East victory points

--- a/toi/localisation/english/victory_points_l_english.yml
+++ b/toi/localisation/english/victory_points_l_english.yml
@@ -448,8 +448,6 @@
  VICTORY_POINTS_387: "Velikiye Luki"
  VICTORY_POINTS_413: "Voronezh"
  VICTORY_POINTS_1278: "Ufa"
- VICTORY_POINTS_1459: "Tashkent"
- VICTORY_POINTS_10530: "Kokand"
  VICTORY_POINTS_1821: "Ekaterinburg"
  VICTORY_POINTS_3134: "Murmansk"
  VICTORY_POINTS_3140: "Tikhvin"
@@ -588,7 +586,7 @@
  #(assorted?)
  VICTORY_POINTS_957: "Yongmingcheng"
  VICTORY_POINTS_1591: "Fort Vernoye"
- VICTORY_POINTS_14661: "Bishkek"
+ VICTORY_POINTS_1675: "Naryn"
  VICTORY_POINTS_12333: "Ishkhabad"
  VICTORY_POINTS_1599: "Tiflis"
  VICTORY_POINTS_3653: "Batumi"
@@ -627,11 +625,13 @@
  VICTORY_POINTS_7071: "Xiamen"
  VICTORY_POINTS_12333: "Ashgabat"
  VICTORY_POINTS_14382: "Ha'il"
- VICTORY_POINTS_14387: "Medina"
+ VICTORY_POINTS_10870: "Wadi Al-Dawasir"
+ VICTORY_POINTS_14387: "Madinah"
  VICTORY_POINTS_1576: "Urganch"
- VICTORY_POINTS_10530: "Angren"
+ VICTORY_POINTS_14581: "Khwarezm"
+ VICTORY_POINTS_10530: "Kokand"
  VICTORY_POINTS_14661: "Bishkek"
- VICTORY_POINTS_7984: "Tagab"
+ VICTORY_POINTS_14591: "Balkh"
  VICTORY_POINTS_7097: "Changsha"
  VICTORY_POINTS_7101: "Changde"
  VICTORY_POINTS_7137: "Nanning"
@@ -761,8 +761,6 @@
  VICTORY_POINTS_10913: "Kerman"
  VICTORY_POINTS_10737: "Kabul"
  VICTORY_POINTS_14618: "Jauzun"
- VICTORY_POINTS_10737: "Kabul"
- VICTORY_POINTS_10737: "Kabul"
  VICTORY_POINTS_4893: "Herat"
  VICTORY_POINTS_5003: "Maimana"
  VICTORY_POINTS_10414: "Merv"
@@ -1190,7 +1188,6 @@
  VICTORY_POINTS_12003: "Valletta"
  VICTORY_POINTS_12068: "Takow"
  VICTORY_POINTS_12732: "Lanzhou"
- VICTORY_POINTS_12758: "Medina"
  VICTORY_POINTS_12991: "Mogadishu"
  VICTORY_POINTS_10919: "Abomey"
  VICTORY_POINTS_9292: "Chelyabinsk"
@@ -1253,7 +1250,6 @@
  VICTORY_POINTS_9: "Zanzibar"
  VICTORY_POINTS_4913: "Tintellust"
  VICTORY_POINTS_3962: "Hakodate"
- VICTORY_POINTS_2057: "Ha'il"
  VICTORY_POINTS_11535: "Caen"
  VICTORY_POINTS_9809: "Podgorica"
  VICTORY_POINTS_7129: "Heze"
@@ -1618,7 +1614,7 @@
  VICTORY_POINTS_1179: "Bela"
  VICTORY_POINTS_8013: "Kalat"
  VICTORY_POINTS_12761: "Kharan"
- VICTORY_POINTS_8098: "Quetta"
+ VICTORY_POINTS_5105: "Quetta"
  VICTORY_POINTS_4998: "Ismail Khan"
  VICTORY_POINTS_12763: "Peshawar"
  VICTORY_POINTS_4979: "Islamabad" # Rawalpindi
@@ -1723,6 +1719,11 @@
  VICTORY_POINTS_1919: "Samarkand"
  VICTORY_POINTS_1573: "Bukhara"
  VICTORY_POINTS_12465: "Khiva"
+ VICTORY_POINTS_1459: "Tashkent"
+ VICTORY_POINTS_10530: "Kokand"
+ VICTORY_POINTS_14651: "Vorukh"
+ VICTORY_POINTS_10476: "Herat"
+ VICTORY_POINTS_14651: "Kabul"
  VICTORY_POINTS_7259: "Fort Victoria"
  VICTORY_POINTS_4379: "Phú Xuân"
  VICTORY_POINTS_1208: "Kuching"
